testsuite/tests/checks/specific_type_invariants/test.out
inv.ads:8:9: error: definition of non class-wide Type_Invariant aspect
8 |    with Type_Invariant => Test_TPT1 (TPT1);        --  FLAG
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

